--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,14 @@
     width: 40%;
     margin: auto;
 }
+
+@media (max-width:425px) {
+    .carousel-root {
+        width: 100%;
+        margin: auto;
+    }
+}
+
+body{
+    color: lightgray;
+}
